test/files/neg/i20026.check
JTest.java:3: error: illegal start of type
import java.util.*;
^
JTest.java:3: error: identifier expected but `;` found.
import java.util.*;
                  ^
2 errors
